Changed carousel id
I guess when you implement things it's not an example anymore.

--- a/public/index.html
+++ b/public/index.html
@@ -280,7 +280,7 @@
         <span class="col-12 col-lg-6 px-3 py-lg-0 py-3">
           <article class="px-5 rounded bg-white d-flex flex-column">
             <h5 class="align-self-center pt-4 pb-0">Team Memories</h5>
-            <span id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <span id="carouselControls" class="carousel slide" data-bs-ride="carousel">
               <span class="carousel-inner">
                 <span class="carousel-item active">
                   <img src="https://images2.minutemediacdn.com/image/upload/c_fill,w_1440,ar_16:9,f_auto,q_auto,g_auto/shape/cover/sport/a-team-1-4bac746d6d38f0aa6ce70a97629a3918.jpg" class="d-block w-100" alt="Team Portrait">
@@ -292,11 +292,11 @@
                   <img src="https://www.looper.com/img/uploads/2017/02/a-team-photo-780x438.jpg" class="d-block w-100" alt="Team Building Exercise">
                 </span>
               </span>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
               </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselControls" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
               </button>
